fix(core/select): fix tags gap

--- a/packages/core/src/multiple-date-picker/_multiple-date-picker-styles.scss
+++ b/packages/core/src/multiple-date-picker/_multiple-date-picker-styles.scss
@@ -68,6 +68,7 @@
     flex-flow: row wrap;
     align-items: center;
     justify-self: flex-start;
+    position: relative;
 
     &--ellipsis {
       flex-wrap: unset;
